feat: add canvacord welcome cards + autoban module; enable GuildMembers intent; update package.json

--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "node": ">=18.17"
   },
   "dependencies": {
+    "canvacord": "^6.0.4",
     "discord.js": "^14.24.0",
+    "dotenv": "^16.4.5",
     "lokijs": "^1.5.12"
   }
 }
