--- a/config.sample.json
+++ b/config.sample.json
@@ -7,6 +7,7 @@
   "debugLevel": "info",
   "loggingServerId": "1431923234567360542",
   "featureOrder": [
+    "setup",
     "auto-bouncer",
     "logging-forwarder",
     "welcome-cards"
@@ -15,6 +16,13 @@
     "1129906023084343346": "https://discord.com/api/webhooks/xxx/yyy",
     "1391983429553492049": "https://discord.com/api/webhooks/aaa/bbb"
   },
+  "loggingChannels": {
+    "messages": "123456789012345678",
+    "moderation": "234567890123456789",
+    "joins": "345678901234567890",
+    "system": "456789012345678901"
+  },
+  "loggingWebhookMeta": {},
   "excludeChannels": {
     "1129906023084343346": [
       "123456789012345678",
