--- a/config.sample.json
+++ b/config.sample.json
@@ -7,6 +7,7 @@
   "debugLevel": "info",
   "loggingServerId": "1431923234567360542",
   "featureOrder": [
+    "setup",
     "auto-bouncer",
     "logging-forwarder",
     "welcome-cards"
@@ -15,6 +16,13 @@
     "1129906023084343346": "https://discord.com/api/webhooks/xxx/yyy",
     "1391983429553492049": "https://discord.com/api/webhooks/aaa/bbb"
   },
+  "loggingChannels": {
+    "messages": "123456789012345678",
+    "moderation": "234567890123456789",
+    "joins": "345678901234567890",
+    "system": "456789012345678901"
+  },
+  "loggingWebhookMeta": {},
   "excludeChannels": {
     "1129906023084343346": [
       "123456789012345678",
@@ -51,12 +59,18 @@
     ],
     "deleteMessageSeconds": 0
   },
+  "mainServerIds": [
+    "1129906023084343346",
+    "1391983429553492049"
+  ],
   "welcome": {
-    "channelId": "555555555555555555",
-    "mentions": {
-      "rules": "666666666666666666",
-      "roles": "777777777777777777",
-      "verify": "888888888888888888"
+    "1129906023084343346": {
+      "channelId": "555555555555555555",
+      "mentions": {
+        "rules": "666666666666666666",
+        "roles": "777777777777777777",
+        "verify": "888888888888888888"
+      }
     }
   }
 }
