--- a/package.json
+++ b/package.json
@@ -4,22 +4,31 @@
   "license": "GPL-3.0-only",
   "description": "Discord bot for The Unbreakable Crown",
   "type": "module",
-  "main": "src/index.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node src/index.js",
+    "lint": "eslint .",
+    "test": "vitest run",
+    "build": "tsc -p . || true",
+    "start": "node index.js",
     "deploy:commands": "node src/core/commands-deploy.js",
     "cmds:list": "node src/core/commands-list.js",
     "cmds:wipe:global": "node src/core/commands-wipe.js --global",
-    "cmds:wipe:guild": "node src/core/commands-wipe.js --guild",
-    "test": "node --test"
+    "cmds:wipe:guild": "node src/core/commands-wipe.js --guild"
   },
   "engines": {
-    "node": ">=18.17"
+    "node": ">=22"
   },
   "dependencies": {
     "canvacord": "^6.0.4",
     "discord.js": "^14.24.0",
     "dotenv": "^16.4.5",
     "lokijs": "^1.5.12"
+  },
+  "devDependencies": {
+    "@types/node": "^22.8.6",
+    "eslint": "^9.12.0",
+    "globals": "^15.9.0",
+    "typescript": "^5.6.3",
+    "vitest": "^1.6.0"
   }
 }
