--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "squire",
   "version": "2.0.0",
-  "license": "GPL-3.0-only",
+  "license": "GPL-3.0",
   "description": "Discord bot for The Unbreakable Crown",
   "type": "module",
   "main": "index.js",
