--- a/config.sample.json
+++ b/config.sample.json
@@ -29,7 +29,8 @@
     "notifyWebhookUrls": [
       "$ENV{AUTOBAN_NOTIFY_WEBHOOK}"
     ],
-    "deleteMessageSeconds": 0
+    "deleteMessageSeconds": 0,
+    "scanBio": true
   },
   "mainServerIds": "$ENV{MAIN_SERVER_IDS_JSON}",
   "welcome": "$ENV{WELCOME_CONFIG_JSON}"
