feat(auto-bouncer): sweep stale unverified members
Add scheduled kicks for members lingering with unverified or test roles, expose configuration in setup, and update logging and notifications.

Allow custom welcome messages to interpret literal \n sequences and ensure newcomers are mentioned, plus extend tests and eslint configuration.

--- a/config.sample.json
+++ b/config.sample.json
@@ -29,6 +29,7 @@
     "notifyWebhookUrls": [
       "$ENV{AUTOBAN_NOTIFY_WEBHOOK}"
     ],
+    "testRoleMap": "$ENV{AUTOBAN_TEST_ROLE_MAP_JSON}",
     "deleteMessageSeconds": 0,
     "scanBio": true
   },
