feat(setup): add embed builder configuration module

--- a/config.sample.json
+++ b/config.sample.json
@@ -33,6 +33,7 @@
     "deleteMessageSeconds": 0,
     "scanBio": true
   },
+  "embedBuilder": {},
   "mainServerIds": "$ENV{MAIN_SERVER_IDS_JSON}",
   "welcome": "$ENV{WELCOME_CONFIG_JSON}"
 }
