feat(moderation): add global ban command

--- a/config.sample.json
+++ b/config.sample.json
@@ -10,6 +10,7 @@
   "featureOrder": [
     "setup",
     "auto-bouncer",
+    "global-ban",
     "logging-forwarder",
     "rainbow-bridge",
     "welcome-cards",
