--- a/config.sample.json
+++ b/config.sample.json
@@ -37,7 +37,23 @@
     "deleteMessageSeconds": 0,
     "scanBio": true
   },
-  "embedBuilder": {},
+  "embedBuilder": {
+    "activeKey": "announcements",
+    "embeds": {
+      "announcements": {
+        "name": "Announcements",
+        "guildId": "",
+        "channelId": "",
+        "preface": "",
+        "embed": {
+          "color": "#5865F2",
+          "title": "",
+          "description": ""
+        },
+        "buttons": []
+      }
+    }
+  },
   "experience": "$ENV{EXPERIENCE_CONFIG_JSON}",
   "mainServerIds": "$ENV{MAIN_SERVER_IDS_JSON}",
   "welcome": "$ENV{WELCOME_CONFIG_JSON}",
@@ -47,13 +63,25 @@
       "clientSecret": "$ENV{SPOTIFY_CLIENT_SECRET}",
       "refreshToken": "$ENV{SPOTIFY_REFRESH_TOKEN}",
       "playlistId": "$ENV{SPOTIFY_PLAYLIST_ID}",
-      "skipDupes": "$ENV{PLAYLISTS_SKIP_DUPES}"
+      "skipDupes": "$ENV{PLAYLISTS_SKIP_DUPES}",
+      "guilds": {
+        "123456789012345678": {
+          "playlistId": "",
+          "name": ""
+        }
+      }
     },
     "youtube": {
       "clientId": "$ENV{YT_CLIENT_ID}",
       "clientSecret": "$ENV{YT_CLIENT_SECRET}",
       "refreshToken": "$ENV{YT_REFRESH_TOKEN}",
-      "playlistId": "$ENV{YT_PLAYLIST_ID}"
+      "playlistId": "$ENV{YT_PLAYLIST_ID}",
+      "guilds": {
+        "123456789012345678": {
+          "playlistId": "",
+          "name": ""
+        }
+      }
     }
   },
   "moderationCommands": {
