--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "cmds:list": "node src/core/commands-list.js",
     "cmds:wipe:global": "node src/core/commands-wipe.js --global",
     "cmds:wipe:guild": "node src/core/commands-wipe.js --guild",
-    "\"test:watch\"": "vitest"
+    "test:watch": "vitest"
   },
   "engines": {
     "node": ">=22"
