--- a/config.sample.json
+++ b/config.sample.json
@@ -15,6 +15,7 @@
     "rainbow-bridge",
     "welcome-cards",
     "experience",
+    "spotlight-gallery",
     "playlists"
   ],
   "mapping": "$ENV{MAPPING_JSON}",
@@ -82,6 +83,15 @@
           "name": ""
         }
       }
+    }
+  },
+  "spotlightGallery": {
+    "123456789012345678": {
+      "enabled": false,
+      "channelId": "",
+      "threshold": 3,
+      "allowSelf": false,
+      "emojis": ["⭐"]
     }
   },
   "moderationCommands": {
