feat(modlog): add dedicated moderation logging module

--- a/config.sample.json
+++ b/config.sample.json
@@ -11,6 +11,7 @@
     "setup",
     "auto-bouncer",
     "moderation-commands",
+    "moderation-logging",
     "logging-forwarder",
     "rainbow-bridge",
     "welcome-cards",
@@ -20,6 +21,7 @@
   ],
   "mapping": "$ENV{MAPPING_JSON}",
   "loggingChannels": "$ENV{LOGGING_CHANNELS_JSON}",
+  "moderationLogging": "$ENV{MODERATION_LOGGING_JSON}",
   "loggingWebhookMeta": {},
   "excludeChannels": "$ENV{EXCLUDE_CHANNELS_JSON}",
   "excludeCategories": "$ENV{EXCLUDE_CATEGORIES_JSON}",
