Remove dependencies with in-repo parser and hashing

--- a/.env.sample
+++ b/.env.sample
@@ -1,21 +1,10 @@
-# .env.sample — place this at the project root (next to package.json and src/)
-# Copy to .env for local dev OR inject via systemd EnvironmentFile in prod.
-# Never commit real secrets.
+# Environment values for the Rust-based Squire bootstrap
+# Copy to .env (kept out of source control) and replace placeholders.
 
-# Runtime
-NODE_ENV=production
+# Discord credentials are referenced from config.json using the $ENV{...} syntax.
+DISCORD_TOKEN=REPLACE_ME
+DISCORD_APPLICATION_ID=REPLACE_ME
+DISCORD_PUBLIC_KEY=REPLACE_ME
 
-# —— Internal MCP bridge API (localhost-only) ——————————————
-# Enable the localhost control API that the MCP bridge will call.
-SQUIRE_INTERNAL_API_ENABLE=true
-
-# Host:Port to bind on MCS; keep it loopback-only.
-SQUIRE_INTERNAL_API_BIND=127.0.0.1:4011
-
-# Shared secret used by the MCP bridge (Bearer token). Use a strong random value.
-# Example generator: `openssl rand -hex 24`
-SQUIRE_INTERNAL_API_TOKEN=REPLACE_WITH_RANDOM_SECRET
-
-# Optional allowlist of Discord channel IDs this API may touch (comma-separated).
-# Leave empty during dev; set for production hardening.
-# SQUIRE_INTERNAL_API_ALLOW=123456789012345678,987654321098765432
+# Optional override for the config path used by the binary
+SQUIRE_CONFIG=./config.json
