Set up Sentry Omega workspace and offline build pipeline

--- a/.env.sample
+++ b/.env.sample
@@ -19,3 +19,16 @@ SQUIRE_INTERNAL_API_TOKEN=REPLACE_WITH_RANDOM_SECRET
 # Optional allowlist of Discord channel IDs this API may touch (comma-separated).
 # Leave empty during dev; set for production hardening.
 # SQUIRE_INTERNAL_API_ALLOW=123456789012345678,987654321098765432
+
+# —— Sentry Omega build settings ——————————————
+# Number of Sentry binaries to produce: 1 (Yellow), 2 (Yellow + Red), or 3 (Yellow + Red + Blue).
+SENTRY_COUNT=1
+
+# Hostnames used by Sentry Omega at runtime. They remain hostnames so environments without static
+# IPs can still coordinate verification.
+SENTRY_YELLOW_HOST=yellow.local
+SENTRY_RED_HOST=red.local
+SENTRY_BLUE_HOST=blue.local
+
+# Optional release identifier for omega manifests (falls back to omega-dev when omitted).
+OMEGA_RELEASE_ID=omega-dev
